= 1.1.1 = * Fix: Removed dark overlay; text might be harder to read, but video is playable on iOS.
git-svn-id: https://plugins.svn.wordpress.org/zendy-lede/trunk@1066619 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/front-end-styles.css
+++ b/css/front-end-styles.css
@@ -28,6 +28,7 @@ VIDEO
 	width: 100%;
 	background: rgba(0,0,0,0.5);
 	z-index: 200;
+	display: none;
 }
 
 #zendy-lede-text-wrapper{
